<resources>
    <string name="app_name">Easy Diary Journal With Lock</string>
    <string name="choose_your_preferred_language_to_n_personalize_your_diary_experience">Choose your preferred language to personalize your diary experience.\n</string>
    <string name="select_language">Select Language</string>
    <string name="done">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permissions">Permissions</string>
    <string name="we_need_your_permission_to_provide_the_best_experience">We need your permission to provide the best experience.</string>
    <string name="later">Later</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="calendar">Calendar</string>
    <string name="good_rating">Your Good Rating Inspire us to Serve You Better Services</string>
    <string name="very_bad">very Bad</string>
    <string name="exit">Exit</string>
    <string name="very_good">Very Good</string>
    <string name="your_good_rating_make_a_difference">Your Good Rating make a Difference</string>
    <string name="cancel">Cancel</string>
    <string name="privacy_policy_link">https://sites.google.com/view/easy-diary-journal-with-lock/home</string>
    <string name="no_launcher">no_launcher</string>
    <string name="more_app_link">more_app_link</string>
    <string name="one">One</string>


    <string name="reminder">Reminders</string>
    <string name="reminder_channel_desc">Description </string>
    <string name="start_writing_diary">Start Writing Diary</string>
    <string name="cherish_the_moments_of_life_and_start_writing_your_diary">Cherish the moments of life and start writing your diary</string>
    <string name="happy">Happy</string>
    <string name="angry">Angry</string>
    <string name="cheeky">Cheeky</string>
    <string name="excited">Excited</string>
    <string name="sad">Sad</string>
    <string name="meh">Meh</string>
    <string name="calm">Calm</string>
    <string name="personal">Personal</string>
    <string name="welcome_back">Welcome Back, %1$s</string>
    <string name="hash">#</string>
    <string name="_13_wed_aug_2024">13 Wed, Aug 2024</string>
    <string name="title">Title</string>
    <string name="today_9_13_pm">Today 9:13 PM</string>
    <string name="add_note">Add Note</string>
    <string name="eraser_off">Eraser: OFF</string>

</resources>