<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp">


    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRatingDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="start"
        android:text="@string/good_rating"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/ratingBar"
        app:layout_constraintEnd_toEndOf="@id/topView"
        app:layout_constraintStart_toStartOf="@id/topView"
        app:layout_constraintTop_toTopOf="@id/topView" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="5"
        android:numStars="5"
        android:paddingTop="@dimen/_10sdp"
        android:progress="3"
        android:progressDrawable="@drawable/rating_bar_full"
        android:stepSize="1"
        app:layout_constraintBottom_toTopOf="@id/txtVeryBad"
        app:layout_constraintEnd_toEndOf="@id/topView"
        app:layout_constraintStart_toStartOf="@id/topView"
        app:layout_constraintTop_toBottomOf="@id/tvRatingDescription" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtVeryBad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/very_bad"
        android:textColor="@color/text_gray_color"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@id/txtVeryGood"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/ratingBar"
        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtVeryGood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_5sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/very_good"
        android:textColor="@color/text_gray_color"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/txtVeryBad"
        app:layout_constraintEnd_toEndOf="@id/ratingBar"
        app:layout_constraintStart_toEndOf="@id/txtVeryBad"
        app:layout_constraintTop_toTopOf="@id/txtVeryBad" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_12sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/exit"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@id/topView"
        app:layout_constraintEnd_toEndOf="@id/txtVeryGood"
        app:layout_constraintTop_toBottomOf="@id/txtVeryGood" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_30sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@id/txtExit"
        app:layout_constraintEnd_toStartOf="@id/txtExit"
        app:layout_constraintTop_toTopOf="@id/txtExit" />


</androidx.constraintlayout.widget.ConstraintLayout>