<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.neweasydairy.fragments.languageFragment.LanguageFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSelectLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/_18sdp"
        android:fontFamily="@font/roboto_extra_bold"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txtChooseLanguage"
        android:layout_marginStart="@dimen/_10sdp"
        android:textColor="@color/black"
        android:text="@string/select_language"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtChooseLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtSelectLanguage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="start"
        app:layout_constraintBottom_toTopOf="@id/languageRecyclerView"
        app:layout_constraintWidth_percent="0.8"
        android:text="@string/choose_your_preferred_language_to_n_personalize_your_diary_experience"/>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/languageRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/txtChooseLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:itemCount="6"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/btnDone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/language_item"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/languageRecyclerView"
        android:background="@drawable/bg_done_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintWidth_percent="0.8"/>

</androidx.constraintlayout.widget.ConstraintLayout>